# memcached_functions_mysql

./: .gitignore  .hg_archival.txt  .hgtags  AUTHORS  ChangeLog  Makefile.am  README  build.install.macosx.sh  configure.ac  install.txt
benchmarks/: benchmark.pl
config/: ac_libmemcached.m4  ac_mysql.m4  bootstrap
docs/: Makefile.am  memc_append.pod  memc_behavior_get.pod  memc_behavior_set.pod  memc_decrement.pod  memc_get.pod  memc_increment.pod  memc_libmemcached_version.pod  memc_list_behaviors.pod  memc_list_distribution_types.pod  memc_list_hash_types.pod  memc_prepend.pod  memc_servers_behavior_get.pod  memc_servers_behavior_set.pod  memc_servers_set.pod  memc_set.pod  memc_stats.pod  memc_udf_version.pod
sql/: install_functions.sql  trigger_fun.sql
src/: Makefile.am  add.c  append.c  args.c  common.h  decrement.c  delete.c  get.c  get_cas.c  increment.c  mget.c  prefix.c  prepend.c  replace.c  servers.c  set.c  stats.c  util.h  version.c
tests/: Makefile.am  memc_test.cmp  memc_test.sql
utils/: install.pl
